search_query: Prevent overflow of long search queries.
Previously, when searching for extremely long queries,
they would overflow beyond the screen.

This commit fixes the bug by ensuring that long
search queries do not overflow.

Fixes: #29568

--- a/web/styles/zulip.css
+++ b/web/styles/zulip.css
@@ -1329,6 +1329,10 @@ div.toggle_resolve_topic_spinner .loading_indicator_spinner {
 
 .empty-feed-notice-description {
     font-size: 1.1em;
+
+    .search-query-word {
+        word-wrap: break-word;
+    }
 }
 
 .message-fade,
